correct line spacing

--- a/webAO/styles/classic.css
+++ b/webAO/styles/classic.css
@@ -54,11 +54,10 @@ img {
 }
 
 #client_chat p {
-	padding: 1.4% 3.13%;
+	padding: 1% 3.13%;
 	color: white;
 	margin: 1px;
-	letter-spacing: 0.4%;
-	line-height: 90%;
+	line-height: 97%;
 }
 
 #client_chatwaiting {
